added readme, replaced about pictures, cleaned up repo

--- a/templates/About.html
+++ b/templates/About.html
@@ -9,7 +9,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="https://media-exp1.licdn.com/dms/image/C5603AQETsa-tlpCU8w/profile-displayphoto-shrink_400_400/0/1588792953638?e=1644451200&v=beta&t=xpz0DC_iOTA5cq51dtl6BYJdhAtcuDszsTDSkf5thOY" alt="Sam" style="width:100%">
+      <img src="https://media.licdn.com/dms/image/D5603AQEBl35fG3Ym1Q/profile-displayphoto-shrink_400_400/0/1688249311940?e=1700092800&v=beta&t=ReSSP-jj7P4neJH7iuoumQLOVxZ71y8krdoxkmkAAeM" alt="Sam" style="width:100%">
       <div class="container">
         <h2>Sam</h2>
         <p>Third year Math/Econ Major. Ness main.</p>
@@ -20,7 +20,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="https://media-exp1.licdn.com/dms/image/D4E35AQFAfkKeINUoOA/profile-framedphoto-shrink_400_400/0/1633463557295?e=1639022400&v=beta&t=H7UIqIJZgYDf_UGhJCCJZt4t5d5-ncHj0Lg1EPdQbVI" alt="Cal" style="width:100%">
+      <img src="https://media.licdn.com/dms/image/D5603AQFAdePAoUWpFA/profile-displayphoto-shrink_400_400/0/1692822030017?e=1700092800&v=beta&t=OXhNBXpidegOUqjLFzIP2XzzwRSbzaK2pY9AI2N_PU0" alt="Cal" style="width:100%">
       <div class="container">
         <h2>Cal</h2>
         <p>Third year CS Major. Diddy Kong main.</p>
@@ -31,7 +31,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="https://media-exp1.licdn.com/dms/image/C4D03AQGBeKJIlf62MQ/profile-displayphoto-shrink_400_400/0/1609400992662?e=1644451200&v=beta&t=ZwSgvTwPAVuwT12A8FrkoiVt8LoBhgQ8_POMr4g-HW4" alt="Brandon" style="width:100%">
+      <img src="https://media.licdn.com/dms/image/C4D03AQGBeKJIlf62MQ/profile-displayphoto-shrink_400_400/0/1609400992662?e=1700092800&v=beta&t=f2qZNPDEa2aje-db7IOn0oXngNuv1Q9Bqb3cbQR58hs" alt="Brandon" style="width:100%">
       <div class="container">
         <h2>Brandon</h2>
         <p>Third year CS Major. Steve main.</p>
